<!--
  ~ Copyright (c) 2019 - 2022 ForgeRock. All rights reserved.
  ~
  ~ This software may be modified and distributed under the terms
  ~ of the MIT license. See the LICENSE file for details.
  -->

<resources>
    <string name="app_name" translatable="false">forgerock-auth</string>

    <!-- OAuth -->
    <string name="forgerock_oauth_client_id" translatable="false">place holder</string>
    <string name="forgerock_oauth_redirect_uri" translatable="false">place holder</string>
    <string name="forgerock_oauth_scope" translatable="false">place holder</string>
    <string name="forgerock_oauth_url" translatable="false">place holder</string>
    <integer name="forgerock_oauth_threshold" translatable="false">30</integer> <!-- in second -->
    <integer name="forgerock_oauth_cache" translatable="false">0</integer> <!-- in second -->

    <!-- Server -->
    <string name="forgerock_url" translatable="false">place holder</string>
    <string name="forgerock_realm" translatable="false">root</string>
    <integer name="forgerock_timeout" translatable="false">30</integer>
    <integer name="forgerock_cookie_cache" translatable="false">0</integer> <!-- in second -->
    <string name="forgerock_cookie_name" translatable="false">iPlanetDirectoryPro</string>
    <string-array name="forgerock_ssl_pinning_public_key_hashes"></string-array>

    <!-- To override default path -->
    <string name="forgerock_authenticate_endpoint" translatable="false" />
    <string name="forgerock_authorize_endpoint" translatable="false" />
    <string name="forgerock_token_endpoint" translatable="false" />
    <string name="forgerock_revoke_endpoint" translatable="false" />
    <string name="forgerock_userinfo_endpoint" translatable="false" />
    <!-- deprecated, use forgerock_session_endpoint -->
    <string name="forgerock_logout_endpoint" translatable="false" />
    <string name="forgerock_session_endpoint" translatable="false" />
    <string name="forgerock_endsession_endpoint" translatable="false" />

    <!-- SSO -->
    <string name="forgerock">ForgeRock</string> <!-- Account Label -->
    <string name="forgerock_account_name" translatable="false">ForgeRock</string> <!-- Account Name -->
    <string name="forgerock_webauthn_account_name" translatable="false">WebAuthn</string>
    <integer name="forgerock_webauthn_max_credential" translatable="false">10</integer>
    <string name="forgerock_sso_logout" translatable="false">org.forgerock.android.auth.broadcast.SSO_LOGOUT</string>
    <string name="forgerock_sso_permission" translatable="false">org.forgerock.android.auth.broadcast.SSO_PERMISSION</string>

    <!-- Service -->
    <string name="forgerock_auth_service" translatable="false">UsernamePassword</string>
    <string name="forgerock_registration_service" translatable="false">Registration</string>

    <!-- WebAuthn -->
    <string name="select_user">Select User</string>
    <string name="submit">Submit</string>

    <!-- Device Binding -->
    <string name="binding_title">Enter Application PIN</string>
    <string name="binding_subtitle">Cryptography device binding</string>
    <string name="binding_description">Please complete with application pin</string>
    <string name="binding_pin">Pin</string>
    <string name="binding_ok">OK</string>
    <string name="binding_cancel">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
